--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <script src="js/three.min.js"></script>
+  <script src="js/TweenMax.min.js"></script>
   <script src="js/game.js"></script>
   <style>
     body{
