:squirrel: requirejs modules

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="author" content="">
 
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-  <script src="js/three.min.js"></script>
-  <script src="js/TweenMax.min.js"></script>
-  <script src="js/game.js"></script>
+  <script src="lib/three.min.js"></script>
+  <script src="lib/TweenMax.min.js"></script>
+  <script data-main="game/startup" src="node_modules/requirejs/require.js"></script>
   <style>
     body{
       text-align: center;
