:toilet: platforms as code

--- a/index.html
+++ b/index.html
@@ -11,22 +11,7 @@
   <script src="lib/three.min.js"></script>
   <script src="lib/TweenMax.min.js"></script>
   <script data-main="game/startup" src="node_modules/requirejs/require.js"></script>
-  <style>
-    body{
-      text-align: center;
-      padding: 0;
-      margin: 0;
-      background: black;
-    }
-
-    #game {
-    	position: absolute;
-    	width: 100%;
-    	height: 100%;
-    	overflow: hidden;
-    	background: linear-gradient(#e4e0ba, #f7d9aa);
-    }
-  </style>
+  <link rel='stylesheet' href="dist/style.css">
 </head>
 <body>
   <div id="game"></div>
