--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="lib/three.min.js"></script>
   <script src="lib/TweenMax.min.js"></script>
   <script data-main="game/startup" src="node_modules/requirejs/require.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link rel='stylesheet' href="dist/style.css">
 </head>
 <body>
